--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  PNPM_VERSION: 10.6.2
+  PNPM_VERSION: 10.20.0
 
 permissions: read-all
 
@@ -47,7 +47,7 @@ jobs:
     name: Test Install
     strategy:
       matrix:
-        node-version: [22.x, 23.x]
+        node-version: [20.x, 22.x, 24.x]
         os: [ubuntu-latest]
     steps:
       - name: Harden Runner
@@ -101,7 +101,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        node-version: [22.x, 23.x]
+        node-version: [20.x, 22.x, 24.x]
         os: [ubuntu-latest]
     steps:
       - name: Harden Runner
@@ -124,4 +124,3 @@ jobs:
         run: pnpm lint
       - name: Build
         run: pnpm build
-
