--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@commitlint/prompt": "^19.8.0",
     "@ducktors/tsconfig": "^1.0.0",
     "@types/node": "^22.13.9",
+    "arktype": "^2.1.25",
     "c8": "^10.1.3",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-plugin-function-rules": "^4.0.1",
@@ -110,7 +111,9 @@
     "rimraf": "^6.0.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "validate-package-exports": "^0.8.0"
+    "valibot": "^1.1.0",
+    "validate-package-exports": "^0.8.0",
+    "zod": "^4.1.12"
   },
   "files": [
     "dist"
