feat: add type inference support to list

--- a/package.json
+++ b/package.json
@@ -83,9 +83,9 @@
     "commit": "npx git-cz --disable-emoji",
     "prepare": "husky",
     "check-updates": "pnpm outdated --recursive --long",
-    "test": "tsx --test ./test/*.ts",
-    "test:watch": "tsx --watch --test \"./test/*.ts\"",
-    "test:coverage": "c8 --all --src src --reporter lcov --reporter text tsx --test ./test/*.ts",
+    "test": "tsc --noEmit && tsx --test ./test/*.ts",
+    "test:watch": "tsc --noEmit && tsx --watch --test \"./test/*.ts\"",
+    "test:coverage": "tsc --noEmit && c8 --all --src src --reporter lcov --reporter text tsx --test ./test/*.ts",
     "benchmark": "tsx ./benchmark/index.ts",
     "benchmark:basic": "tsx ./benchmark/basic.ts",
     "benchmark:list": "tsx ./benchmark/list.ts",
