--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -5,12 +5,9 @@ on:
     branches:
       - main
 
-permissions:
-  id-token: write
-  contents: write
-  packages: write
-  pull-requests: write
-  issues: read
+
+permissions:  
+  contents: read
 
 env:
   PNPM_VERSION: 10.20.0
@@ -20,6 +17,12 @@ jobs:
   release:
     name: Changesets
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+      packages: write
+      pull-requests: write
+      issues: read
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
