--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
     "target": "es2022",
     "module": "NodeNext",
     "skipLibCheck": true,
-    "declaration": true,
+    "noEmit": true,
     "esModuleInterop": true,
-    "moduleDetection": "force",
+    "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": true,
     "erasableSyntaxOnly": true,
     "strict": true,
