--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,8 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist/esm",
+    "outDir": "dist",
     "module": "NodeNext",
+    "noEmit": false,
+    "declaration": true,
+    "rewriteRelativeImportExtensions": true,
     "sourceMap": true
   },
   "include": ["src/**/*.ts"],
