--- a/package.json
+++ b/package.json
@@ -74,9 +74,9 @@
     "commit": "npx git-cz --disable-emoji",
     "prepare": "husky",
     "check-updates": "pnpm outdated --recursive --long",
-    "test": "tsc --noEmit && node --test ./test/*.ts",
-    "test:watch": "tsc --noEmit && node --watch --test ./test/*.ts",
-    "test:coverage": "tsc --noEmit && c8 --all --src src --reporter lcov --reporter text node --test ./test/*.ts"
+    "test": "tsc && node --test ./test/*.ts",
+    "test:watch": "tsc && node --watch --test ./test/*.ts",
+    "test:coverage": "tsc && mkdir -p coverage && node --test --experimental-test-coverage --test-reporter=spec --test-reporter=lcov --test-reporter-destination=stdout --test-reporter-destination=coverage/lcov.info --test-coverage-exclude=src/types/** --test-coverage-exclude=test/** ./test/*.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -89,7 +89,6 @@
     "@ducktors/tsconfig": "^1.0.0",
     "@types/node": "^22.13.9",
     "arktype": "^2.1.25",
-    "c8": "^10.1.3",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-plugin-function-rules": "^4.0.1",
     "husky": "^9.1.7",
@@ -129,11 +128,5 @@
   },
   "dependencies": {
     "@standard-schema/spec": "^1.0.0"
-  },
-  "c8": {
-    "exclude": [
-      "src/types/**",
-      "test/**"
-    ]
   }
 }
