--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - main
 
-
-permissions:  
+permissions:
   contents: read
 
 env:
@@ -56,8 +55,15 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Install dependencies
+        run: pnpm build
+
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
+      - name: Attest Build Provenance
+        uses: actions/attest-build-provenance@ef244123eb79f2f7a7e75d99086184180e6d0018 # v2.1.0
+        with:
+          subject-path: "dist"
 
       - name: Create Release Pull Request
         uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba # v1.5.3
@@ -68,4 +74,4 @@ jobs:
           title: "Version Release"
         env:
           GITHUB_TOKEN: ${{ secrets.DUCKTORS_PAT }}
-          NPM_TOKEN: ${{ secrets.DUCKTORS_NPM_TOKEN }}
+          NPM_TOKEN: ""
