--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Install dependencies
+      - name: Build
         run: pnpm build
 
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
@@ -63,7 +63,7 @@ jobs:
       - name: Attest Build Provenance
         uses: actions/attest-build-provenance@ef244123eb79f2f7a7e75d99086184180e6d0018 # v2.1.0
         with:
-          subject-path: "dist"
+          subject-path: "dist/**"
 
       - name: Create Release Pull Request
         uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba # v1.5.3
